--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,11 @@
+server.port=8888
 # jsp
 spring.mvc.view.prefix=/WEB-INF/view/
 spring.mvc.view.suffix=.jsp
 
 # sqllite
 spring.datasource.driver-class-name=org.sqlite.JDBC
-spring.datasource.jdbc-url=jdbc:sqlite:F:/sqlite.db
+spring.datasource.jdbc-url=jdbc:sqlite:./sqlite.db 
 
 # UTF-8±àÂë
 spring.http.encoding.charset=UTF-8
@@ -18,3 +19,4 @@ pagehelper.helper-dialect=sqlite
 pagehelper.reasonable=true
 pagehelper.support-methods-arguments=true
 pagehelper.params=count=countSql
+
